# iree

./: CMakeLists.txt
.github/workflows/: bump_torch_mlir.yml
compiler/src/iree/compiler/Codegen/Common/GPU/: GPUDistributionPatterns.cpp
compiler/src/iree/compiler/Codegen/Common/GPU/test/: gpu_vector_distribution.mlir
docs/website/docs/building-from-source/: getting-started.md
experimental/tracy_python/: CMakeLists.txt  README.md  build-tracy-python-full.sh  build-tracy-python-minimal.sh  build-tracy-python.sh  demo.py  example.py  test_tracy_python.py
